# parsera_platform

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml
api_gateway/: Cargo.toml  Dockerfile  Makefile
api_gateway/src/: app.rs  config.rs  main.rs  routes.rs
api_gateway/src/api/: mod.rs  user.rs
api_gateway/src/api/crawlers/: crawler.rs  mod.rs
api_gateway/src/database/: db.rs  mod.rs
api_gateway/src/rabbit/: broker.rs  mod.rs
api_gateway/src/redis/: commands.rs  mod.rs
api_gateway/src/utils/: mod.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
common/src/models/: crawler.rs  event.rs  mod.rs  notification.rs  scheduler.rs
common/src/tools/: mod.rs  retry.rs
configs/rabbitmq/: Dockerfile
configs/rabbitmq/conf/: definitions.json
configs/rabbitmq/scripts/: init.sh
db_manager/: Cargo.toml  Dockerfile
db_manager/src/: duration.rs  main.rs
db_manager/src/repo/: mod.rs
extractor/src/: app.rs
notification_service/: pyproject.toml
notification_service/notification_service/: __main__.py  sender.py
notification_service/notification_service/libs/email/: __init__.py
notification_service/notification_service/models/: event.py
rocket_gateway/: Cargo.toml  Dockerfile  Makefile  Rocket.toml
rocket_gateway/src/: main.rs
rocket_gateway/src/api/: mod.rs
rocket_gateway/src/api/common/: mod.rs
rocket_gateway/src/api/crawlers/: crawler.rs  site.rs
rocket_gateway/src/broker/: mod.rs
scheduler/: .dockerignore  Cargo.toml  Dockerfile  Makefile
scheduler/src/: api.rs  broker.rs  config.rs  jobs.rs  main.rs  scheduler.rs  utils.rs
scheduler/src/api/: api.rs  mod.rs
scheduler/src/broker/: broker.rs  mod.rs
scheduler/src/database/: mod.rs  postgres.rs
scheduler/src/jobs/: initial.rs  mod.rs
scheduler/src/orchestrator/: events.rs  mod.rs
scraper/: .dockerignore
scraper/src/: main.rs
scrapper/: Cargo.toml
scrapper/src/: handlers.rs  identity.rs  models.rs  rabbit.rs  redis.rs
scripts/: indeed_test.ipynb
scripts/.ipynb_checkpoints/: indeed_test-checkpoint.ipynb
