[workspace]
members = [
    "common",
    "api_gateway",
    "scrapper",
    "extractor",
]

[workspace.dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4.31"
