[workspace]
resolver = "2"
members = [
    "common",
    "api_gateway",
    "rocket_gateway",
    "scrapper",
    "extractor", "scheduler",
]

[workspace.dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4.31"
rand = "0.8.5"
anyhow = "1"
uuid ={ version = "1.8.0", features = ["v7", "fast-rng", "serde"]}
