[package]
name = "rocket_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
anyhow = "1"
uuid ={ version = "1.8.0", features = ["v7", "fast-rng", "serde"]}

common = { path = "../common" }

rocket = { version = "0.5.0", features = ["json", "serde_json", "uuid"] }
rocket_db_pools ={ version = "0.1.0", features = ["deadpool_redis", "sqlx_postgres"] }
deadpool-lapin = { version = "0.12.0", features = ["rt_tokio_1", "serde"] }
deadpool = "0.11.2"
