[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.31", features = ["serde"] }
uuid ={ version = "1.8.0", features = ["v7", "fast-rng", "serde"]}
strum = "0.26"
strum_macros = "0.26"
