[package]
name = "db_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
anyhow = "1"
uuid ={ version = "1.8.0", features = ["v7", "fast-rng", "serde"]}

common = { path = "../common" }

tokio = {version = "1.37.0", features = ["full"]}
scylla = "0.12"
