[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
anyhow = "1"
uuid ={ version = "1.8.0", features = ["v7", "fast-rng", "serde"]}

common = { path = "../common" }

tokio = {version = "1.37.0", features = ["full"]}
tokio-cron-scheduler = { version = "0.10.0", features = ["has_bytes", "postgres_storage", "signal"] }
# Temp
actix-web = "4.5.1"
tracing-actix-web = "0.7.10"
deadpool-lapin = "0.12.0"
tokio-stream = "0.1.15"
